--- a/index.html
+++ b/index.html
@@ -345,30 +345,6 @@
 
 
   
-    <section class="section rad-animation-group pb-0" id="riesgos_relativos">
-      <div class="container rad-fade-down">
-        <div class="row d-flex flex-column-reverse flex-md-row">
-          <div class="about__profile-picture col-12 col-md-6">
-            <img
-              class="lozad img-responsive image-right-overflow"
-              src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-              data-src="https://coronamex.github.io/imagenes/riesgos_relativos.png"
-              data-srcset="https://coronamex.github.io/imagenes/riesgos_relativos.png 1x, https://coronamex.github.io/imagenes/riesgos_relativos@2x.png 2x"
-              alt="Riesgo relativo de hospitalización y de entrar a cuidados intensivos por COVID-19 basado en los casos en México. El estimador de máxima verosimilitud y el intervalo de confianza de 95% son mostrados."
-            />
-          </div>
-          <div class="col-12 col-md-6 my-auto my-auto">
-            <h3>¿Quién está en riesgo?</h3>
-            <p class="lead">
-              <p><strong>Todos estamos en riesgo</strong>. Para el 6 de mayo, 123 (14%) de las 857 mujeres, y 857 (25%) de los 1847 hombres que fallecieron por COVID-19 no tenían ninguno de los factores de riesgo reportados. Sin embargo, ciertos factores pueden hacer más probable que una persona contagiada desarrolle enfermedad grave.</p>
-<p>En México, podemos calcular el riesgo relativo de que pacientes con COVID-19 tengan que ser hospitalizados, llevados a la unidad de cuidados intensivos o que fallezcan por COVID-19. Diabetes, enfermedad pulmonar obstructiva crónica (EPOC), insuficiencia renal crónica e hipertensión son los mayores factores de riesgo. El asma no tiene una asociación significativa con el riesgo, lo cual puede parecer raro pero hasta el momento <a href="https://www.aaaai.org/conditions-and-treatments/library/asthma-library/covid-asthma" target="_blank">no hay</a> <a href="https://time.com/5802423/coronvirus-asthma-high-risk/" target="_blank">evidencia</a> de que gente con asma tenga un mayor riesgo que los demás. Simplemente <strong>todos debemos extremar precauciones</strong>.</p>
-            </p>
-              
-          </div>
-        </div>
-      </div>
-    </section>
-  
     <section class="section rad-animation-group pb-0" id="nacional_sintomas">
       <div class="container rad-fade-down">
         <div class="row d-flex flex-column-reverse flex-md-row">
@@ -534,7 +510,7 @@
             <h3>No se ha detenido la epidemia</h3>
             <p class="lead">
               <p>Las epidemias avanzan porque la enfermedad se transmite de una persona a otra. La R efectiva (R_t) es el número promedio de gente contagiada por cada persona que se enferma. Si la R efectiva es más de uno los casos aumentan, mientras que si la R efectiva es menos de uno cada vez hay menos casos.</p>
-<p>Lograr una tasa de contagios por contagiado de menos de uno es la única manera en que la cantidad de casos disminuya. En otras palabras, un R efectiva menor a uno indica que se pasó el pico epidémico. De acuerdo a esta métrica, varios estados han mostrado una disminución en el número de contagios por caso, pero en ningún caso la R efeciva es menor a uno, indicando que no se ha pasado el pico epidémico.</p>
+<p>Lograr un promedio de contagios por contagiado menor a uno es la única manera de que la cantidad de casos disminuya. En otras palabras, un R efectiva menor a uno indica que se pasó el pico epidémico. varios estados han mostrado una disminición en esta métrica, pero en ningún caso la R efectiva es claramente menor a uno, indicando que no se ha pasado el pico epidémico.</p>
 <p>Esta gráfica muestra la R efectiva en estados con al menos 500 casos confirmados. La línea más gruesa muestra el mejor estimado (mediana) y el área sombreada representa el rango más probable de valores (intervalo modal de 90%). Los estimados se actualizan cada noche con los datos más recientes. Debido al <a href="./clinicos#tiempo_deteccion">retraso</a> en la detección de casos aunque sólo podemos estimar la R efectiva hasta hace 5 días.</p>
 <p>Este análisis se basa en <a href="https://rt.live/" target="_blank">rt.live</a> que calcula R_t para EEUU. El código para estimar la R efectiva en México está <a href="https://github.com/coronamex/visualizando/blob/master/estados/rt.live.ipynb" target="_blank">aquí</a> y los estimados <a href="https://raw.githubusercontent.com/coronamex/visualizando/master/estimados/rt_live_estimados.csv" target="_blank"> aquí</a>.</p>
             </p>
