--- a/municipios/top_zm_casos2/index.html
+++ b/municipios/top_zm_casos2/index.html
@@ -328,7 +328,7 @@
           <h2>Cada zona metropolitana tiene su propia epidemia (1/2)</h2>
           <p class="lead">
             <p>Esta gráfica muestra el número de casos que mostraron síntomas en cada fecha en nueve <a href="https://www.inegi.org.mx/app/biblioteca/ficha.html?upc=702825006792" target="_blank">zonas metropolitanas</a>. Estas ciudades tienen hasta el momento menos casos que el <a href="../../municipios#vm_casos">Valle de México</a> o que las otras nueve <a href="../../municipios#top_zm_casos">zonas metropolitanas más afectadas</a>, pero la epidemia sigue creciendo en la mayoría de estas ciudades también.</p>
-<p>La epidemia se ha comportado de diferentes maneras en estas ciudades. Juárez es la única donde el punto más alto de contagios parece haber pasado sin que la epidemia se saliera de control aunque es muy pronto para afirmarlo con seguridad. En ciudades como Aguascalientes, Cuernavaca, Tampico y Toluca la velocidad con la que aparecen nuevos casos parece haber disminuido, pero no podemos saber si los casos van a empezar a disminuir. Finalmente, en Acapulco, Guadalajara, Oaxaca y Querétaro la epidemia claramente se está acelerando.</p>
+<p>La epidemia se ha comportado de diferentes maneras en estas ciudades. Juárez es la única donde el punto más alto de contagios parece haber pasado, pero esto no garantiza que los contagios no puedan aumentar nuevamente. En ciudades como Aguascalientes, Cuernavaca y Tampico la cantidad de casos nuevos se ha estabilizado pero tampoco descienden. Finalmente, en Acapulco, Guadalajara, Oaxaca, Querétaro y Toluca la epidemia sigue acelerándose.</p>
           </p>
             
         </div>
