--- a/secciones/casos/index.html
+++ b/secciones/casos/index.html
@@ -509,7 +509,7 @@
             <p class="lead">
               <p>Debido a su densidad poblacional y movilidad interna, las <a href="https://www.inegi.org.mx/app/biblioteca/ficha.html?upc=702825006792" target="_blank">zonas metropolitanas</a> son las regiones donde el COVID-19 puede avanzar con mayor facilidad, y cada una de estas regiones tiene una epidemia con características propias.</p>
 <p>Esta gráfica muestra el número de casos que mostraron síntomas en cada fecha para las nueve zonas metropolitanas más afectadas de México (excluyendo al <a href="../../municipios#vm_casos">Valle de México</a>). Las siguientes nueve están <a href="../../municipios#top_zm_casos2">aquí</a>.</p>
-<p>Cada zona metropolitana ha seguido su propia trayectoria y en ninguna se ha superado con claridad el pico epidémico. En ciudades como Cancún, Culiacán,  Mexicali, Tijuana y Villahermosa parece que los casos nuevos no están creciendo con tanta rapidez en días más recientes. En otras como Mérida, Monterrey, Puebla-Tlaxcala y Veracruz los casos nuevos casos siguen acelerándose.</p>
+<p>Cada zona metropolitana ha seguido su propia trayectoria y en ninguna se ha superado con claridad el pico epidémico. En ciudades como Cancún, Culiacán,  Mexical y Tijuana parece que los casos nuevos no están creciendo, pero tampoco están descendiendo. En otras como Mérida, Monterrey, Puebla-Tlaxcala, Veracruz y Villahermosa la cantidad de casos nuevos sigue aumentando.</p>
             </p>
               
           </div>
@@ -533,7 +533,7 @@
             <h3>Cada zona metropolitana tiene su propia epidemia (1/2)</h3>
             <p class="lead">
               <p>Esta gráfica muestra el número de casos que mostraron síntomas en cada fecha en nueve <a href="https://www.inegi.org.mx/app/biblioteca/ficha.html?upc=702825006792" target="_blank">zonas metropolitanas</a>. Estas ciudades tienen hasta el momento menos casos que el <a href="../../municipios#vm_casos">Valle de México</a> o que las otras nueve <a href="../../municipios#top_zm_casos">zonas metropolitanas más afectadas</a>, pero la epidemia sigue creciendo en la mayoría de estas ciudades también.</p>
-<p>La epidemia se ha comportado de diferentes maneras en estas ciudades. Juárez es la única donde el punto más alto de contagios parece haber pasado sin que la epidemia se saliera de control aunque es muy pronto para afirmarlo con seguridad. En ciudades como Aguascalientes, Cuernavaca, Tampico y Toluca la velocidad con la que aparecen nuevos casos parece haber disminuido, pero no podemos saber si los casos van a empezar a disminuir. Finalmente, en Acapulco, Guadalajara, Oaxaca y Querétaro la epidemia claramente se está acelerando.</p>
+<p>La epidemia se ha comportado de diferentes maneras en estas ciudades. Juárez es la única donde el punto más alto de contagios parece haber pasado, pero esto no garantiza que los contagios no puedan aumentar nuevamente. En ciudades como Aguascalientes, Cuernavaca y Tampico la cantidad de casos nuevos se ha estabilizado pero tampoco descienden. Finalmente, en Acapulco, Guadalajara, Oaxaca, Querétaro y Toluca la epidemia sigue acelerándose.</p>
             </p>
               
           </div>
