--- a/index.html
+++ b/index.html
@@ -464,10 +464,10 @@
             />
           </div>
           <div class="col-12 col-md-6 my-auto my-auto">
-            <h3>La epidemia crece en el Valle de México</h3>
+            <h3>¿La epidemia crece en el Valle de México?</h3>
             <p class="lead">
-              <p>La zona metropolitana del Valle de México ha sido por mucho la región más afectada del país, acumulando cerca de la mitad de los casos confirmados. Esta gráfica muestra como el número de casos nuevos no ha dejado de aumentar aunque podría ser que el número de nuevos casos no esté creciendo tan rápidamente.</p>
-<p>Debido a que los casos nuevos se detectan con un <a href="./clinicos#tiempo_deteccion">retraso típico de 10 días</a>, es posible que el número de casos que mostraron síntomas en las últimas dos semanas aumente.</p>
+              <p>La zona metropolitana del Valle de México ha sido por mucho la región más afectada del país, acumulando cerca de la mitad de los casos confirmados. Esta gráfica muestra como el número de de acuerdo a la fecha en que mostraron síntomas. Debido a que los casos nuevos se detectan con un <a href="./clinicos#tiempo_deteccion">retraso típico de 11 días</a>, sólo podemos estar razonablemente seguros del número de casos hace unas dos semanas</p>
+<p>Se empieza a ver un aparente descenso en el número de casos nuevos entre el 10 y el 15 de mayo, sin embargo, esto ha pasado en <a href="./municipios#top_zm_casos">otras ciudades</a> donde los casos han vuelto a aumentar. Esto significa que no podemos estar seguros hasta no ver unas dos semanas de descenso sostenido en el número de casos nuevos.</p>
 <p>Otras <a href="./municipios#top_zm_casos">zonas</a> <a href="./municipios/top_zm_casos2">metropolitanas</a> también han sido afectadas</p>
             </p>
               
@@ -493,7 +493,7 @@
             <p class="lead">
               <p>Debido a su densidad poblacional y movilidad interna, las <a href="https://www.inegi.org.mx/app/biblioteca/ficha.html?upc=702825006792" target="_blank">zonas metropolitanas</a> son las regiones donde el COVID-19 puede avanzar con mayor facilidad, y cada una de estas regiones tiene una epidemia con características propias.</p>
 <p>Esta gráfica muestra el número de casos que mostraron síntomas en cada fecha para las nueve zonas metropolitanas más afectadas de México (excluyendo al <a href="./municipios#vm_casos">Valle de México</a>). Las siguientes nueve están <a href="./municipios#top_zm_casos2">aquí</a>.</p>
-<p>Cada zona metropolitana ha seguido su propia trayectoria y en ninguna se ha superado con claridad el pico epidémico. En ciudades como Cancún, Culiacán,  Mexical y Tijuana parece que los casos nuevos no están creciendo, pero tampoco están descendiendo. En otras como Mérida, Monterrey, Puebla-Tlaxcala, Veracruz y Villahermosa la cantidad de casos nuevos sigue aumentando.</p>
+<p>Cada zona metropolitana ha seguido su propia trayectoria. Cancún y Tijuana acumulan varias semanas al hilo con un descenso en el número de casos, sugiriendo que han superado el pico epidémico, pero el riesgo sigue siendo alto. En las otras zonas metropolitanas la epidemia sigue acelerándose.</p>
             </p>
               
           </div>
