--- a/municipios/top_zm_casos/index.html
+++ b/municipios/top_zm_casos/index.html
@@ -329,7 +329,7 @@
           <p class="lead">
             <p>Debido a su densidad poblacional y movilidad interna, las <a href="https://www.inegi.org.mx/app/biblioteca/ficha.html?upc=702825006792" target="_blank">zonas metropolitanas</a> son las regiones donde el COVID-19 puede avanzar con mayor facilidad, y cada una de estas regiones tiene una epidemia con características propias.</p>
 <p>Esta gráfica muestra el número de casos que mostraron síntomas en cada fecha para las nueve zonas metropolitanas más afectadas de México (excluyendo al <a href="../../municipios#vm_casos">Valle de México</a>). Las siguientes nueve están <a href="../../municipios#top_zm_casos2">aquí</a>.</p>
-<p>Cada zona metropolitana ha seguido su propia trayectoria y en ninguna se ha superado con claridad el pico epidémico. En ciudades como Cancún, Culiacán,  Mexical y Tijuana parece que los casos nuevos no están creciendo, pero tampoco están descendiendo. En otras como Mérida, Monterrey, Puebla-Tlaxcala, Veracruz y Villahermosa la cantidad de casos nuevos sigue aumentando.</p>
+<p>Cada zona metropolitana ha seguido su propia trayectoria. Cancún y Tijuana acumulan varias semanas al hilo con un descenso en el número de casos, sugiriendo que han superado el pico epidémico, pero el riesgo sigue siendo alto. En las otras zonas metropolitanas la epidemia sigue acelerándose.</p>
           </p>
             
         </div>
