--- a/casos/aplanamiento/index.html
+++ b/casos/aplanamiento/index.html
@@ -448,5 +448,8 @@
 </script>
 
   
+  
+  <script data-goatcounter="https://coronamex.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
