--- a/etiquetas/casos/index.html
+++ b/etiquetas/casos/index.html
@@ -869,5 +869,8 @@
 </script>
 
   
+  
+  <script data-goatcounter="https://coronamex.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
