--- a/etiquetas/concepto/index.html
+++ b/etiquetas/concepto/index.html
@@ -455,5 +455,8 @@
 </script>
 
   
+  
+  <script data-goatcounter="https://coronamex.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
