--- a/etiquetas/index.html
+++ b/etiquetas/index.html
@@ -1007,5 +1007,8 @@
 </script>
 
   
+  
+  <script data-goatcounter="https://coronamex.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
