--- a/etiquetas/municipios/index.html
+++ b/etiquetas/municipios/index.html
@@ -650,5 +650,8 @@
 </script>
 
   
+  
+  <script data-goatcounter="https://coronamex.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
