--- a/etiquetas/nacional/index.html
+++ b/etiquetas/nacional/index.html
@@ -721,5 +721,8 @@
 </script>
 
   
+  
+  <script data-goatcounter="https://coronamex.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
