--- a/etiquetas/zona_metropolitana/index.html
+++ b/etiquetas/zona_metropolitana/index.html
@@ -506,5 +506,8 @@
 </script>
 
   
+  
+  <script data-goatcounter="https://coronamex.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
