--- a/index.html
+++ b/index.html
@@ -665,5 +665,8 @@
 </script>
 
   
+  
+  <script data-goatcounter="https://coronamex.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
