--- a/muertes/muertes_region/index.html
+++ b/muertes/muertes_region/index.html
@@ -449,5 +449,8 @@
 </script>
 
   
+  
+  <script data-goatcounter="https://coronamex.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
