--- a/municipios/mapa_exceso_incidencia/index.html
+++ b/municipios/mapa_exceso_incidencia/index.html
@@ -449,5 +449,8 @@
 </script>
 
   
+  
+  <script data-goatcounter="https://coronamex.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
