--- a/secciones/muertes/index.html
+++ b/secciones/muertes/index.html
@@ -572,5 +572,8 @@
 </script>
 
   
+  
+  <script data-goatcounter="https://coronamex.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
