--- a/municipios/top_zm_casos/index.html
+++ b/municipios/top_zm_casos/index.html
@@ -328,7 +328,7 @@
           <h2>Cada zona metropolitana tiene su propia epidemia (1/2)</h2>
           <p class="lead">
             <p>Debido a su densidad poblacional y movilidad interna, las <a href="https://www.inegi.org.mx/app/biblioteca/ficha.html?upc=702825006792" target="_blank">zonas metropolitanas</a> son las regiones donde el COVID-19 puede avanzar con mayor facilidad, y cada una de estas regiones tiene una epidemia con características propias.</p>
-<p>Esta gráfica muestra el número de casos que mostraron síntomas en cada fecha para las nueve zonas metropolitanas más afectadas de México (excluyendo al <a href="../../municipios#vm_casos">Valle de México</a>). Las siguientes nueve están <a href="../../municipios#top_zm_casos2">aquí</a>.</p>
+<p>Esta gráfica muestra el número de casos que mostraron síntomas por fecha en nueve de las primeras zonas metropolitanas afectadas. (excluyendo al <a href="../../municipios#vm_casos">Valle de México</a>). Estas ciudades tenían al menos 200 casos acumulados para el 18 de abril. Puedes ver más ciudades <a href="../../municipios#top_zm_casos2">aquí</a>.</p>
 <p>Cada zona metropolitana ha seguido su propia trayectoria. Cancún y Tijuana acumulan varias semanas al hilo con un descenso en el número de casos, sugiriendo que han superado el pico epidémico, pero el riesgo sigue siendo alto. En las otras zonas metropolitanas la epidemia sigue acelerándose.</p>
           </p>
             
