--- a/municipios/top_zm_casos3/index.html
+++ b/municipios/top_zm_casos3/index.html
@@ -312,23 +312,23 @@
   
 
   
-  <section class="section rad-animation-group pb-0" id="top_zm_casos2">
+  <section class="section rad-animation-group pb-0" id="top_zm_casos3">
     <div class="container rad-fade-down">
       <div class="row d-flex flex-column-reverse flex-md-row">
         <div class="about__profile-picture col-12 col-md-6">
           <img
             class="lozad img-responsive image-right-overflow"
             src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-            data-src="https://coronamex.github.io/imagenes/top_zm_casos2.png"
-            data-srcset="https://coronamex.github.io/imagenes/top_zm_casos2.png 1x, https://coronamex.github.io/imagenes/top_zm_casos2@2x.png 2x"
+            data-src="https://coronamex.github.io/imagenes/top_zm_casos3.png"
+            data-srcset="https://coronamex.github.io/imagenes/top_zm_casos3.png 1x, https://coronamex.github.io/imagenes/top_zm_casos3@2x.png 2x"
             alt="Número de casos de COVID-19 por fecha de inicio de síntomas en las segundas 9 zonas metropolitanas más afectadas en México (excluyendo al Valle de México) desde 2020-03-01. Debido a que los contagiados tardan en ser detectados, podría parecer que hay menos nuevos casos en días recientes pero estos números probablemente aumentarán en los próxios días."
           />
         </div>
         <div class="col-12 col-md-6 my-auto my-auto">
-          <h2>Cada zona metropolitana tiene su propia epidemia (2/3)</h2>
+          <h2>Cada zona metropolitana tiene su propia epidemia (3/3)</h2>
           <p class="lead">
-            <p>Esta gráfica muestra el número de casos que mostraron síntomas en cada fecha en nueve <a href="https://www.inegi.org.mx/app/biblioteca/ficha.html?upc=702825006792" target="_blank">zonas metropolitanas</a>. donde la epidemia inició más lentamente que en <a href="../../municipios#top_zm_casos">otras ciudades</a> o que en el <a href="../../municipios#vm_casos">Valle de México</a>, pero esto no quiere decir que tengan menos casos. Esta ciudades llegaron a 500 casos acumulados el 16 de mayo, lo cual fue más rápido que en estas <a href="../../municipios#top_zm_casos3">otra ciudades</a>.</p>
-<p>La epidemia se ha comportado de diferentes maneras en estas ciudades. Juárez es la única donde los casos han disminuido por varias semanas, mientras que Cuernavaca y Querétaro muestran han mostrado una estabilización por varias semanas. En el resto de estas ciudades la epidemia sigue acelerándose.</p>
+            <p>Esta gráfica muestra el número de casos que mostraron síntomas en cada fecha en nueve <a href="https://www.inegi.org.mx/app/biblioteca/ficha.html?upc=702825006792" target="_blank">zonas metropolitanas</a>. donde la epidemia inició más lentamente que en <a href="../../municipios#top_zm_casos">otras</a> <a href="../../municipios#top_zm_casos2">ciudades</a> o que en el <a href="../../municipios#vm_casos">Valle de México</a>, pero esto no quiere decir que tengan menos casos. Esta ciudades llegaron a 500 casos acumulados el 25 de mayo.</p>
+<p>Fuera de Coatzacoalcos que lleva varias semanas con un lento descenso en el número de casos nuevos, la mayoría de estas ciudades tiene una epidemia que inició después que en <a href="../../municipios#top_zm_casos">otras</a> <a href="../../municipios#top_zm_casos2">ciudades</a> o que en el <a href="../../municipios#vm_casos">Valle de México</a>, y el número de casos en estas ciudades sigue acelerándose.</p>
           </p>
             
         </div>
